feat: web histories
